# aero

./: .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .rustc_info.json  .rustdoc_fingerprint.json  .rustfmt.toml  CNAME  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  aero-ref.py  aero.py  bochsrc.txt  bootstrap.yml  build.rs  crates.js  help.html  improving-build-times.txt  index.html  jinx-config  linker.ld  patched.txt  run.bat  runner.py  rust-toolchain  search-index.js  server.c  settings.html  src-files.js
aero_build/: Cargo.toml
aero_build/src/: bootloader.rs  bundled.rs  lib.rs  main.rs  uefi.rs  utils.rs
src/aero_boot/: Cargo.toml
src/aero_boot/src/: lib.rs  load.rs  logger.rs  main.rs  paging.rs  unwind.rs
src/aero_build/: Cargo.toml
src/aero_build/src/: build.rs  constants.rs  frontend.rs  main.rs  test.rs  utils.rs
src/aero_kernel/: Cargo.toml  build.rs  cmdline.rs.html  logger.rs.html  main.rs.html  modules.rs.html  rendy.rs.html  unwind.rs.html
src/aero_kernel/acpi/: aml.rs.html  fadt.rs.html  hpet.rs.html  madt.rs.html  mcfg.rs.html  mod.rs.html  rsdp.rs.html  sdt.rs.html
src/aero_kernel/arch/: mod.rs.html
src/aero_kernel/arch/x86_64/: apic.rs.html  controlregs.rs.html  cpu_local.rs.html  gdt.rs.html  io.rs.html  mem.rs.html  mod.rs.html  signals.rs.html  syscall.rs.html  task.rs.html  time.rs.html  tls.rs.html  user_copy.rs.html
src/aero_kernel/arch/x86_64/interrupts/: exceptions.rs.html  idt.rs.html  mod.rs.html
src/aero_kernel/drivers/: e1000.rs.html  gdbstub.rs.html  keyboard.rs.html  lai.rs.html  mod.rs.html  mouse.rs.html  pci.rs.html  pty.rs.html  uart_16550.rs.html
src/aero_kernel/drivers/block/: ahci.rs.html  mod.rs.html
src/aero_kernel/drivers/block/ide/: channel.rs.html  mod.rs.html  registers.rs.html
src/aero_kernel/drivers/block/nvme/: command.rs.html  mod.rs.html  queue.rs.html
src/aero_kernel/drivers/drm/: mod.rs.html  rawfb.rs.html
src/aero_kernel/drivers/tty/: ctty.rs.html  mod.rs.html  vtty.rs.html
src/aero_kernel/fs/: cache.rs.html  devfs.rs.html  epoll.rs.html  eventfd.rs.html  file_table.rs.html  inode.rs.html  mod.rs.html  pipe.rs.html  procfs.rs.html  ramfs.rs.html
src/aero_kernel/fs/block/: gpt.rs.html  mod.rs.html
src/aero_kernel/fs/ext2/: disk.rs.html  group_desc.rs.html  mod.rs.html
src/aero_kernel/mem/: alloc.rs.html  mod.rs.html  pti.rs.html  slab.rs.html  vmalloc.rs.html
src/aero_kernel/mem/paging/: addr.rs.html  frame.rs.html  mapper.rs.html  mod.rs.html  page.rs.html  page_table.rs.html
src/aero_kernel/net/: arp.rs.html  loopback.rs.html  mod.rs.html  tcp.rs.html  udp.rs.html
src/aero_kernel/socket/: ipv4.rs.html  mod.rs.html  netlink.rs.html  tcp.rs.html  udp.rs.html  unix.rs.html
src/aero_kernel/src/: apic.rs  cmdline.rs  emu.rs  logger.rs  main.rs  modules.rs  panic.rs  rendy.rs  tests.rs  time.rs  tls.asm  tls.rs  unwind.rs
src/aero_kernel/src/acpi/: aml.rs  fadt.rs  hpet.rs  madt.rs  mcfg.rs  mod.rs  rsdp.rs  sdt.rs  smp_trampoline.asm  smp_trampoline.real  trampoline.asm  trampoline.real.asm
src/aero_kernel/src/arch/: mod.rs
src/aero_kernel/src/arch/aarch64/: amd64_wrapper.asm  dtb.rs  interrupts.rs  mod.rs  task.rs  time.rs  tls.rs
src/aero_kernel/src/arch/x86_64/: apic.rs  asm_macros.rs  controlregs.rs  cpu.rs  cpu_local.rs  gdt.rs  io.rs  load_gdt.asm  mem.rs  mod.rs  registers.S  registers.inc  signals.rs  syscall.rs  task.asm  (+5 more)
src/aero_kernel/src/boot/: mod.rs  stivale2.rs
src/aero_kernel/src/drivers/: ahci.rs  drm.rs  e1000.rs  gdbstub.rs  keyboard.rs  lai.rs  mod.rs  mouse.rs  pci.rs  pty.rs  tty.rs  uart_16550.rs  uart_mmio32.rs  uart_pl011.rs
src/aero_kernel/src/fs/: block.rs  cache.rs  dev_fs.rs  devfs.rs  epoll.rs  eventfd.rs  file_table.rs  initramfs.rs  inode.rs  mod.rs  path.rs  pipe.rs  procfs.rs  ramfs.rs
src/aero_kernel/src/mem/: alloc.rs  mod.rs  pti.rs  slab.rs  vmalloc.rs
src/aero_kernel/src/net/: arp.rs  checksum.rs  dhcp.rs  ethernet.rs  ip.rs  loopback.rs  mod.rs  tcp.rs  udp.rs
src/aero_kernel/src/socket/: inet.rs  ipv4.rs  mod.rs  netlink.rs  tcp.rs  udp.rs  unix.rs
src/aero_kernel/src/syscall/: fs.rs  futex.rs  handler.asm  ipc.rs  mod.rs  net.rs  process.rs  syscall.asm  time.rs
src/aero_kernel/src/userland/: context.rs  elf.rs  mod.rs  process.rs  scheduler.rs  signals.rs  task.rs  terminal.rs  threading.S  userland.asm  vm.rs
src/aero_kernel/src/utils/: bitmap.rs  buffer.rs  dma.rs  io.rs  linker.rs  memory.rs  mod.rs  stack.rs  sync.rs
src/aero_kernel/src/vga/: color.rs  font.rs  mod.rs  rendy.rs
src/aero_kernel/syscall/: fs.rs.html  futex.rs.html  ipc.rs.html  mod.rs.html  net.rs.html  process.rs.html  time.rs.html
src/aero_kernel/userland/: mod.rs.html  signals.rs.html  terminal.rs.html  vm.rs.html
src/aero_kernel/userland/scheduler/: mod.rs.html  round_robin.rs.html
src/aero_kernel/userland/task/: mod.rs.html  sessions.rs.html
src/aero_kernel/utils/: bitmap.rs.html  buffer.rs.html  dma.rs.html  mod.rs.html  sync.rs.html
src/aero_proc/: Cargo.toml
src/aero_proc/src/: cpu_local.rs  downcastable.rs  indirect.rs  ioctl.rs  lib.rs  syscall.rs  syscall_macro.rs  test.rs  test_macro.rs
src/aero_syscall/: Cargo.toml  consts.rs.html  lib.rs.html  netlink.rs.html  signal.rs.html  socket.rs.html  syscall.rs.html  time.rs.html
src/aero_syscall/src/: consts.rs  lib.rs  netlink.rs  signal.rs  socket.rs  syscall.rs  time.rs  writer.rs
userland/aero_ipc/: Cargo.toml
userland/aero_ipc/src/: event_loop.rs  interfaces.rs  lib.rs  message.rs
userland/apps/aipc_test/: Cargo.toml
userland/apps/aipc_test/src/: main.rs
userland/apps/window_test/: Cargo.toml
userland/apps/window_test/src/: main.rs
userland/libs/aero_ipc/: Cargo.toml
userland/libs/aero_ipc/src/: interfaces.rs  lib.rs
userland/libs/aipc/: Cargo.toml
userland/libs/aipc/src/: async_runtime.rs  lib.rs
userland/libs/aipc_api/: Cargo.toml
userland/libs/aipc_api/src/: lib.rs
userland/servers/window_server/: Cargo.toml
userland/servers/window_server/src/: main.rs
(+23723 files in other folders)
