[package]
name = "aero"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2018"

[dependencies]
spin = "0.9"
volatile = "0.2"
bitflags = "1.2"
x86_64 = "0.13.3"

[dependencies.goblin]
version = "0.3.4"
default-features = false
features = ["elf32", "elf64"]

[dependencies.bootloader]
version = "0.9.16"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
opt-level = 3
lto = true

[profile.release]
lto = true
