[package]
name = "aero"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2018"

[dependencies]
spin = "0.9"
volatile = "0.2"
bitflags = "1.2"
x86_64 = "0.13.3"
bit_field = "0.10.1"
linked_list_allocator = "0.8.11"
static_assertions = "1.1"

[dependencies.goblin]
version = "0.3.4"
default-features = false
features = ["elf32", "elf64"]

[dependencies.bootloader]
version = "0.9.16"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
opt-level = 3
lto = true

[profile.release]
lto = true

[package.metadata.bootimage]
run-args = [
    "-d",
    "int,guest_errors",
    "-D",
    "qemu.log",
    "-drive",
    "id=disk,file=hdd.img,format=raw,if=none",
    "-device", 
    "ahci,id=ahci",
    "-device",
    "ide-hd,drive=disk,bus=ahci.0",
]
