[package]
name = "aero_build"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2018"

[features]
default = ["bin"]

bin = ["json", "reqwest", "structopt", "tokio", "fs_extra"]
lib = ["target-lexicon", "cc", "nasm-rs"]

[dependencies]
json = { version = "0.12.4", optional = true }
reqwest = { version = "0.11.3", features = ["rustls-tls"], default-features = false, optional = true }
structopt = { version = "0.3.21", optional = true }
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread"], optional = true }
fs_extra = { version = "1.2.0", optional = true }

target-lexicon = { version = "0.12.0", optional = true }
cc = { version = "1.0", features = ["parallel"], optional = true }
nasm-rs = { version = "0.2", features = ["parallel"], optional = true }

cfg-if = "1.0.0"
