[package]
name = "aero_build"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version="0.11.3", features=["rustls-tls"], default-features=false }
structopt = "0.3.21"
tokio = { version="1.5.0", features=["macros", "rt", "rt-multi-thread"] }
fs_extra = "1.2.0"
xshell = "0.1.14"
