[package]
name = "aero_kernel"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2021"

[features]
round-robin = []
sysroot = []

# `ci` exits qemu with a success status code if the tests have
# been completed successfully or a error status code if one of the
# tests failed (or panicked).
ci = []

# `kmemleak` provides a way of detecting possible
# kernel memory leaks in a way similar to a tracing
# garbage collector.
kmemleak = []
vmlog = []
syslog = []

default = ["round-robin"]

[dependencies]
spin = { version = "0.9.4", default-features = false, features = [
    "spin_mutex",
    "rwlock",
    "once",
] }
bitflags = "1.2.1"
bit_field = "0.10.1"
log = "0.4.14"
xmas-elf = "0.8.0"
hashbrown = "0.12.3"
rustc-demangle = "0.1.20"
intrusive-collections = "0.9.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
lai = { git = "https://github.com/aero-os/lai-rs" }
uapi = { path = "../uapi" }
cpio_reader = { git = "https://github.com/Andy-Python-Programmer/cpio_reader" }
static_assertions = "1.1.0"
lru = "0.8.0"
bytemuck = "1.12.1"

limine = { git = "https://github.com/limine-bootloader/limine-rs" }
cfg-if = "1.0"

# X86_64 specific dependencies:
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.0.0"

[dependencies.vte]
git = "https://github.com/Andy-Python-Programmer/vte"
features = ["no_std"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.aero_proc]
path = "../aero_proc"

[dependencies.aero_syscall]
path = "../aero_syscall"

[build-dependencies]
nasm-rs = { version = "0.2", features = ["parallel"] }
