[package]
name = "aero_kernel"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2021"

[features]
round-robin = []
sysroot = []

# `ci` exits qemu with a success status code if the tests have
# been completed successfully or a error status code if one of the
# tests failed (or panicked).
ci = []

# `kmemleak` provides a way of detecting possible
# kernel memory leaks in a way similar to a tracing
# garbage collector.
kmemleak = []

default = ["round-robin"]

[dependencies]
spin = { version = "0.9.8", default-features = false, features = [
    "spin_mutex",
    "rwlock",
    "once",
] }
bitflags = "1.2.1"
bit_field = "0.10.2"
log = "0.4.19"
xmas-elf = "0.9.0"
hashbrown = "0.14.1"
rustc-demangle = "0.1.23"
# intrusive-collections:
#   `nightly`: Get access to const variants of the functions.
intrusive-collections = { version = "0.9.6", features = ["nightly"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
lai = { git = "https://github.com/aero-os/lai-rs" }
uapi = { path = "../uapi" }
cpio_reader = { git = "https://github.com/Andy-Python-Programmer/cpio_reader" }
static_assertions = "1.1.0"
lru = "0.11.1"
bytemuck = "1.14.0"
limine = { git = "https://github.com/limine-bootloader/limine-rs" }
num-traits = { version = "0.2", default-features = false }
vte = { version = "0.12.0", features = ["ansi"] }

byte_endian = { git = "https://github.com/aero-os/byte_endian" }
crabnet = { git = "https://github.com/aero-os/crabnet" }
crabnet_tcp = { git = "https://github.com/aero-os/crabnet", default-features = false }
# crabnet = { path = "../../../orgs/aero/crabnet" }
# crabnet_tcp = { path = "../../../orgs/aero/crabnet/crabnet_tcp", default-features = false }

# X86_64 specific dependencies:
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.0.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.aero_proc]
path = "../aero_proc"

[dependencies.aero_syscall]
path = "../aero_syscall"

[build-dependencies]
nasm-rs = { version = "0.2", features = ["parallel"] }
