[package]
name = "aero_syscall"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = "1.2.1"
num-derive = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
byte_endian = { git = "https://github.com/aero-os/byte_endian" }
static_assertions = "1.1.0"
