[package]
name = "window_test"
version = "0.1.0"
authors = ["czapek1337 <czapek1337@gmail.com>"]
edition = "2021"

[dependencies]
std = { path = "../../libs/aero_std" }
aero_syscall = { path = "../../../src/aero_syscall" }
aipc = { path = "../../libs/aipc" }
aipc-api = { path = "../../libs/aipc_api" }
