[package]
name = "aipc"
version = "0.1.0"
edition = "2021"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]

[dependencies]
std = { path = "../../libs/aero_std" }
aero_syscall = { path = "../../../src/aero_syscall" }
aipc-proc = { path = "../aipc-proc" }
hashbrown = "0.11.2"
postcard = { version = "0.7.3", features = ["alloc"] }
serde = { version = "1.0.136", default-features = false, features = ["alloc"] }
spin = "0.9"
