[package]
name = "window_server"
version = "0.1.0"
authors = ["czapek1337 <czapek1337@gmail.com>"]
edition = "2021"

[dependencies]
hashbrown = "0.12.0"
spin = "0.9.2"
aero_syscall = { path = "../../../src/aero_syscall" }
aipc = { path = "../../libs/aipc" }
aipc-api = { path = "../../libs/aipc_api" }
std = { path = "../../libs/aero_std" }
