[package]
name = "window_server"
version = "0.1.0"
authors = ["czapek1337 <czapek1337@gmail.com>"]
edition = "2021"

[dependencies]
hashbrown = "0.12.0"
spin = "0.9.8"
aero_syscall = { path = "../../../src/aero_syscall" }
aero_ipc = { path = "../../libs/aero_ipc" }
libc = { git = "https://github.com/Andy-Python-Programmer/libc" }
